# claw-plaid-ledger

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BUGS.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  RUNBOOK.md  SPRINT.md  VISION.md  bugs.md  items.toml.example  pyproject.toml
.codex/: setup.sh
.githooks/: pre-commit  pre-push
.github/: pull_request_template.md
.github/workflows/: ci.yml
deploy/docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml
deploy/proxy/: Caddyfile.example  authelia-notes.md  nginx-mtls.conf.example
deploy/systemd/: claw-plaid-ledger-duckdns.service  claw-plaid-ledger-duckdns.timer  claw-plaid-ledger-sync.service  claw-plaid-ledger-sync.timer  claw-plaid-ledger.service
scripts/: deploy-local.sh  duckdns-update.sh  ledger-api  sync-skills.sh
skills/: sprint14_task1_migration_matrix.md
skills/athena-ledger/: README.md  SKILL.md
skills/hestia-ledger/: README.md  SKILL.md
src/: typer.py
src/claw_plaid_ledger/: __init__.py  cli.py  config.py  db.py  items_config.py  link_server.py  logging_utils.py  notifier.py  plaid_adapter.py  plaid_client.py  (+6 more)
tests/: __init__.py  conftest.py  helpers.py  test_cli.py  test_cli_allocations.py  test_cli_doctor.py  test_cli_items.py  test_cli_link.py  test_cli_refresh.py  test_cli_sync.py  test_config.py  test_db.py  test_items_config.py  test_link_server.py  test_logging_utils.py  test_notifier.py  test_plaid_adapter.py  test_plaid_client.py  test_preflight.py  test_server.py  test_server_accounts.py  test_server_annotations.py  test_server_auth.py  test_server_categories.py  test_server_correlation.py  test_server_errors.py  test_server_health.py  test_server_ip_allowlist.py  test_server_logging.py  test_server_scheduling.py  test_server_spend.py  test_server_spend_trends.py  test_server_sync.py  test_server_transactions.py  test_server_webhook.py  test_server_webhooks.py  test_sync_engine.py  test_webhook_auth.py
(+25 files in other folders)
